change item by article in all project
