# app/Http/Controllers/Api/V1/ArticleController.php
@@ -3,10 +3,10 @@
 namespace App\Http\Controllers\Api\V1;
 
 use App\Http\Controllers\Controller;
-use App\Http\Resources\ItemResource;
+use App\Http\Resources\ArticleResource;
 use App\Http\Resources\CategoryResource;
 use Illuminate\Http\Request;
-use App\Models\Item;
+use App\Models\Article;
 use App\Models\Category;
 
 /**
@@ -18,14 +18,14 @@ use App\Models\Category;
  * @OA\Server(url="http://exercise-api.test/"),
  */
 
-class ItemController extends Controller
+class ArticleController extends Controller
 {
     /**
      * @OA\Get(
-     *  path="/api/v1/item?search={search}",
-     *  tags={"Items"},
-     *  summary="Search item by name",
-     *  description="Search items by name and return details with categories.",
+     *  path="/api/v1/article?search={search}",
+     *  tags={"Articles"},
+     *  summary="Search article by name",
+     *  description="Search articles by name and return details with categories.",
      *  @OA\Parameter(
      *      description="Parameter to search by name",
      *      in="path",
@@ -36,7 +36,7 @@ class ItemController extends Controller
      *  ),
      *  @OA\Response(
      *      response=200,
-     *      description="View item's details",
+     *      description="View article's details",
      *      @OA\JsonContent(
      *          @OA\Property(property="id", type="number", example=10),
      *          @OA\Property(property="name", type="string", example="Camioneta Chevrolet"),
@@ -44,7 +44,7 @@ class ItemController extends Controller
      *          @OA\Property(property="status", type="number", example=1),
      *          @OA\Property(property="created_at", type="string", example="2022-10-10 10:10:10.000000Z"),
      *          @OA\Property(property="updated_at", type="string", example="2022-10-10 10:10:10.000000Z"),
-     *          @OA\Property(property="categories", type="array", @OA\Items(
+     *          @OA\Property(property="categories", type="array", @OA\Articles(
      *              @OA\Property(property="id", type="number", example=10),
      *              @OA\Property(property="name", type="string", example="Vehiculo"),
      *              @OA\Property(property="slug", type="string", example="vehiculo"),
@@ -61,23 +61,23 @@ class ItemController extends Controller
     public function search(Request $request)
     {
         $search = $request->input('search');
-        $item = ItemResource::collection(
-            Item::where('name', 'like',"%".$search."%")
+        $article = ArticleResource::collection(
+            Article::where('name', 'like',"%".$search."%")
             ->with('categories')->has("categories")
             ->orderby('id', 'desc')
             ->get()
         );
-        return response()->json($item);
+        return response()->json($article);
     }
 
     /**
      * @OA\Get(
-     *  path="/api/v1/items?qty={qty}",
-     *  tags={"Items"},
-     *  summary="List all items",
-     *  description="List all items by quantity",
+     *  path="/api/v1/articles?qty={qty}",
+     *  tags={"Articles"},
+     *  summary="List all articles",
+     *  description="List all articles by quantity",
      *  @OA\Parameter(
-     *      description="Parameter to set the quantity of items to return",
+     *      description="Parameter to set the quantity of articles to return",
      *      in="path",
      *      name="qty",
      *      required=false,
@@ -86,7 +86,7 @@ class ItemController extends Controller
      *  ),
      *  @OA\Response(
      *      response=200,
-     *      description="View item's details",
+     *      description="View article's details",
      *      @OA\JsonContent(
      *          @OA\Property(property="id", type="number", example=10),
      *          @OA\Property(property="name", type="string", example="Camioneta Chevrolet"),
@@ -103,14 +103,14 @@ class ItemController extends Controller
      * )
      */
     
-    public function items(Request $request)
+    public function articles(Request $request)
     {
         $search = $request->input('qty');
-        $item = ItemResource::collection(
-            Item::all()
+        $article = ArticleResource::collection(
+            Article::all()
             ->take($search)
         );
-        return response()->json($item);
+        return response()->json($article);
     }
 
     /**
@@ -146,10 +146,10 @@ class ItemController extends Controller
     public function searchCategory(Request $request)
     {
         $search = $request->input('search');
-        $item = CategoryResource::collection(
+        $article = CategoryResource::collection(
             Category::where('name', 'like',"%".$search."%")
             ->get()
         );
-        return response()->json($item);
+        return response()->json($article);
     }
 }
