# app/Providers/RouteServiceProvider.php
@@ -42,7 +42,7 @@ class RouteServiceProvider extends ServiceProvider
                 ->middleware('api')
                 ->namespace($this->namespace)
                 ->group(
-                    base_path('routes/api/v1/items.php'),
+                    base_path('routes/api/v1/articles.php'),
                 );
 
             Route::middleware('web')
