# resources/views/partials/base.blade.php
@@ -22,10 +22,10 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                        <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="#">CRUD Items</a>
+                        <li class="nav-article">
+                            <a class="nav-link active" aria-current="page" href="#">CRUD Articles</a>
                         </li>
-                        <li class="nav-item">
+                        <li class="nav-article">
                             <a class="nav-link active" aria-current="page" href="#">View Categories</a>
                         </li>
                     </ul>
